All_Component_DX/force-app/main/default/objects/IOTConfiguration__c/IOTConfiguration__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>IOTConfiguration</description>
    <label>IOTConfiguration</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOTConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>