All_Component_DX/force-app/main/default/objects/IOTConfiguration__c/fields/Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>